Adjusted the editorconfig settings. Added spotless gradle plugin. Moved the versions in the build.gradle file and updated some of the versions Removed the jvmArgs for tests. Not needed once mockito was updated. Added test output settings to see the results of the tests as built. Updated the tests to use JUnit5 and assertj. Updated the gradle wrapper to latest version, 8.10.1